--- a/api/MakeOverApi/MakeOverApi.csproj
+++ b/api/MakeOverApi/MakeOverApi.csproj
@@ -184,8 +184,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\HotDeals\HotDealsController.cs" />
-    <Compile Include="Controllers\HotDeals\SuggestController.cs" />
+    <Compile Include="Controllers\Services\HotDealsController.cs" />
+    <Compile Include="Controllers\Services\SuggestController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
