--- a/api/MakeOverApi/Web.config
+++ b/api/MakeOverApi/Web.config
@@ -79,7 +79,9 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="makeoverEntities" connectionString="metadata=res://*/imgProSqlDataModel.csdl|res://*/imgProSqlDataModel.ssdl|res://*/imgProSqlDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\makeover.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="makeoverEntities" connectionString="Data Source=.\sqlexpress;Initial Catalog=MakeOverDB;MultipleActiveResultSets=True;Integrated Security=true" providerName="System.Data.SqlClient" />-->    
+    <add name="makeoverEntities" connectionString="metadata=res://*/imgProSqlDataModel.csdl|res://*/imgProSqlDataModel.ssdl|res://*/imgProSqlDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;Initial Catalog=MakeOverAppDB;user=traveledge;password=qqq;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="makeoverEntities" connectionString="metadata=res://*/imgProSqlDataModel.csdl|res://*/imgProSqlDataModel.ssdl|res://*/imgProSqlDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;Initial Catalog=MakeOverAppDB;Integrated Security=SSPI;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
